[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Main-Menu.gd" type="Script" id=1]
[ext_resource path="res://AssetsFini/img/Grunge typography escape black background wallpaper.jpg" type="Texture" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -247.0
margin_top = -175.0
margin_right = 274.0
margin_bottom = 52.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 521.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -270, -12 )
focus_neighbour_top = NodePath("../Quit")
text = "Commencer une nouvelle partie"

[node name="Crédit" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 521.0
margin_bottom = 44.0
text = "Crédit"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 521.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../Play")
text = "retour au bureau"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Crédit" to="." method="_on_Crdit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
